Conclução da 1 parte CSS + Tarefa 2

--- a/CSS/index.html
+++ b/CSS/index.html
@@ -4,6 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CSS</title>
+    <!-- 3 - Internal CSS-->
+    <style>
+        p {
+            color: gold;
+            font-size: 25px;
+        }
+    </style>
+    <!-- 4 - external CSS-->
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="list.css">
 </head>
 <body>
     <!-- 1 - Inline CSS-->
@@ -14,5 +24,18 @@
     <h1 style="color: red; font-size: 50px; border-bottom: 1px solid purple;">
         Mudar de Cor e tamanho da font
     </h1>
+
+    <!-- 3 - Internal CSS-->
+    <p>Eu fui estilizado pelo internal</p>
+
+    <!-- 4 - external CSS-->
+    <h3>Meu titulo external</h3>
+
+    <!-- 6 - multiplos CSS-->
+    <ul>
+        <li>Banana</li>
+        <li>Maça</li>
+        <li>Melão</li>
+    </ul>
 </body>
 </html>
