--- a/CSS/index.html
+++ b/CSS/index.html
@@ -37,5 +37,24 @@
         <li>Maça</li>
         <li>Melão</li>
     </ul>
+
+    <!-- 7 - Desafio -->
+    <h3>Desafio feito em pasta separadas</h3>
+
+    <!-- 8 - Classes -->
+    <p class="paragraph">Algum texto</p>
+    <p class="paragraph">Algum texto 2</p>
+    <p class="paragraph">Algum texto 3</p>
+
+    <!-- 9 - ID -->
+    <h2 id="exclusive-title">Este é um titulo com ID</h2>
+
+    <!-- 10 - Multiplas regras, ordem css -->
+    <h2 id="algum-title" class="titulo">Algum Texto</h2>
+    <h2 class="titulo">Algum texto 2</h2>
+    <h2>Algum texto 3</h2>
+
+    <!-- 11 nome de cor -->
+    <p class="color-name">Qualquer texto para nome de cores</p>
 </body>
 </html>
