cores rgb, rgba, hsl

--- a/CSS/index.html
+++ b/CSS/index.html
@@ -56,5 +56,28 @@
 
     <!-- 11 nome de cor -->
     <p class="color-name">Qualquer texto para nome de cores</p>
+
+    <!-- 12 - Hexadecimal -->
+    <p class="hex">paragrafo com hexadecimal</p>
+
+    <!-- 13 - RGB -->
+    <p class="rgb">Usando o RGB</p>
+
+    <!-- 14 - RGBA -->
+    <p class="rgba">Usando o RGBA</p>
+
+    <!-- 15 - HSL -->
+    <p class="hsl">Usando o HSL</p>
+
+    <!-- 16 -background Color -->
+    <p class="back-color">Usando Background color</p>
+
+    <!-- 17 - backgroun com opacidade -->
+    <div class="bg-opacity">
+        <p>Opacidade no Background</p>
+    </div>
+    <div class="bg-opacity-2">
+        <p>Opacidade no Background 2</p>
+    </div>
 </body>
 </html>
