--- a/CSS/index.html
+++ b/CSS/index.html
@@ -79,5 +79,60 @@
     <div class="bg-opacity-2">
         <p>Opacidade no Background 2</p>
     </div>
+
+    <!-- 18 - RGBA COM OPACITY -->
+    <div class="rgba-opacity">
+        <h1>Este titulo precisa estar visivel</h1>
+    </div>
+
+    <!-- 19 - IMG BACKGROUND -->
+    <h1 class="bg-image">
+        Este usar uma imagem
+    </h1>
+
+    <!-- 20 - IMG BACKGROUND CENTRALIZAR -->
+    <div class="not-centered-bg"></div>
+    <div class="centered-bg"></div>
+
+    <!-- 21 - BOX MODEL LAR E ALT-->
+    <div class="height-width"></div>
+    <div class="height-width-2"></div>
+
+    <!-- 22 - padding -->
+    <div class="without-padding">Este nao tem padding</div>
+    <div class="padding">Este tem padding</div>
+
+    <!-- 23 - padding, left, top, button, right -->
+    <p class="padding-individual">Este e um padding individual</p>
+
+    <!-- 24 - padding com widht-->
+    <div class="without-border-box">
+        <p>Algum conteudo</p>
+    </div>
+    <div class="border-box">
+        <p>Algum conteudo</p>
+    </div>
+
+    <!-- 25 - border -->
+    <div class="border">borda</div>
+    <div class="border-2">borda 2</div>
+
+    <!-- 26 - bordas individuais -->
+    <p class="border-left">borda na esquerda</p>
+    <p class="border-bottom">borda inferior</p>
+
+    <!-- 27 - borda radios -->
+    <div class="rounded-p">Arredondamento de bordas</div>
+    <div class="rounded-p-2">Arredondamento de bordas 2</div>
+
+    <!-- 28 - margem -->
+    <div class="margin">Eu tenho margem</div>
+    <div class="margin-top">Margem no topo</div>
+    <div class="margin-shothand">Usando o shothand</div>
+
+    <!-- 29 - Box model todos elementos -->
+    <div class="box-model">
+        <p>Tenho todos os elementos box model</p>
+    </div>
 </body>
 </html>
