--- a/CSS/index.html
+++ b/CSS/index.html
@@ -28,6 +28,11 @@
     <!-- 3 - Internal CSS-->
     <p>Eu fui estilizado pelo internal</p>
 
+    <!-- 44 - position sticky -->
+    <div class="sticky">
+        <span>Eu sou sticky</span>
+    </div>
+
     <!-- 4 - external CSS-->
     <h3>Meu titulo external</h3>
 
@@ -133,6 +138,91 @@
     <!-- 29 - Box model todos elementos -->
     <div class="box-model">
         <p>Tenho todos os elementos box model</p>
+    </div>
+
+    <!-- 30 - text align -->
+    <p class="text-aligned">Alinhado a direita</p>
+    <div class="container-center">
+        <h2>Estamos centralizado</h2>
+        <p>algum texto</p>
+    </div>
+
+    <!-- 31 - text decoration -->
+    <p class="underline">Eu tenho Underline</p>
+    <p class="line-trough">Eu tenho risco</p>
+    <a href="#" class="remove-underline">Sem undeline</a>
+
+    <!-- 32 - text transforme -->
+    <p class="upper">Este tem caixa alta</p>
+    <p class="lower">Este e uma caixa baixa </p>
+
+    <!-- 32 - Espacamento -->
+    <h2 class="spacing">Eu tenho espacamento</h2>
+
+    <!-- 33 - font -->
+    <p class="serif">Serif font</p>
+    <p class="sans-serif">sans-serif font</p>
+    <p class="monospace">monospace font</p>
+
+    <!-- 34 - font style -->
+    <p class="italic">Em italico</p>
+    <p class="oblique">Estou em oblique</p>
+
+    <!-- 35 - font weight -->
+    <p class="thin">Eu sou mais fino</p>
+    <p class="bold">Eu estou em bold</p>
+    <p class="bolder">Eu sou a maior fonte</p>
+
+    <!-- 36 - font size -->
+    <h4 class="small">Titulo pequeno</h4>
+    <h4 class="big">Titulo grande</h4>
+
+    <!-- 37 - display -->
+    <div class="inline-box">Eu</div>
+    <div class="inline-box">Sou</div>
+    <div class="inline-box">DEV</div>
+    <span class="block">teste 1</span>
+    <span class="block">teste 2</span>
+
+    <!-- 38 - escondendo elementos -->
+    <p class="invisible">Encontre se puder</p>
+
+    <!-- 39 - Position static-->
+    <div class="static">
+        <span>Eu sou estatico</span>
+    </div>
+
+    <!-- 40 - postion relative -->
+    <div class="relative">
+        <span>Eu sou relativo</span>
+    </div>
+    <p>Eu sou um paragrafo</p>
+
+    <!-- 41 - position absolute -->
+    <div class="absolute">
+        <span>Eu sou absoluto</span>
+    </div>
+    <p>Eu sou um paragrafo</p>
+
+    <!-- 42 - position relative absolute -->
+    <div class="relative-container">
+        <div class="absolute-1"></div>
+        <div class="absolute-2"></div>
+    </div>
+
+    <!-- 43 - position fixed -->
+    <div class="fixed">
+        <span>Clique aqui para solicitar suporte</span>
+    </div>
+
+    <!-- 44 - position sticky -->
+    <!-- foi incluido na seguencia da aula 3 -->
+
+    <!-- 45 - position z-index -->
+    <div class="relative-container">
+        <div class="absolute-3"></div>
+        <div class="absolute-4"></div>
+        <div class="absolute-5"></div>
     </div>
 </body>
 </html>
