--- a/CSS/Projeto - Tributo/index.html
+++ b/CSS/Projeto - Tributo/index.html
@@ -21,7 +21,7 @@
             </figure>
         </div>
         <!-- biography -->
-        <div class="biography">
+        <div class="biography-container">
             <h2>Sobre os anos inicians da banda</h2>
             <p>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. <span class="bold">Laudantium voluptas odit, quidem,</span> expedita sequi velit sit iure libero tenetur sint consequatur voluptatum nesciunt fuga neque itaque quas illum quia maxime.
@@ -63,7 +63,7 @@
             </ul>
         </div>
         <!-- citação segunda -->
-        <div>
+        <div class="quotes-container">
             <blockquote>
                 "Old at heart, but I'm only twenty eight <br>
                 And I'm much too young <br>
