modificando pagina inicial

--- a/CSS/1 - INTRO/index.html
+++ b/CSS/1 - INTRO/index.html
@@ -212,7 +212,11 @@
 
     <!-- 43 - position fixed -->
     <div class="fixed">
-        <span>Clique aqui para solicitar suporte</span>
+        <span>
+            <a href="../../index.html">
+                Clique aqui para voltar ao menu principal
+            </a>
+        </span>
     </div>
 
     <!-- 44 - position sticky -->
