--- a/index.html
+++ b/index.html
@@ -3,16 +3,47 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./CSS/style.css">
-    <title>Fomacção Front-End - React</title>
+    <link rel="stylesheet" href="style.css">
+    <title>Fomação Front-End - React</title>
 </head>
 <body>
-    <h1>Uma ponte</h1>
-    <p>Ministrado pela hora de codar</p>
-    <ul>
-        <li>Rio</li>
-        <li>Montanha</li>
-        <li>Mares</li>
-    </ul>
+    <h1>LINKS PARA PAGINAS DO CURSOS</h1>
+    <div class="container">
+        <div class="css">
+            <div>
+                <h2 style="text-align: center; font-size: 25px;">CSS</h2>
+                <div class="intro">
+                    <h2>Intro</h2>
+                    <ul>
+                        <li>
+                            <a href="./CSS/1 - INTRO/index.html">
+                                1 - Intro 
+                            </a>
+                        </li>
+                        <li>
+                            <a href="./CSS/Desafio CSS/Tarefa 2/tarefa2.html">
+                                Desafio - Tarefa 2
+                            </a>
+                        </li>
+                        <li>
+                            <a href="./CSS/Desafio CSS/Tarefa 3/tarefa.html">
+                                Desafio - Tarefa 3
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+            <div class="intro">
+                <h2>Formularios</h2>
+                <ul>
+                    <li>
+                        <a href="./CSS/2 - FORMULARIOS/index.html">
+                            1 - Fromularios
+                        </a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
