--- a/CSS/Desafio CSS/Tarefa 2/tarefa2.html
+++ b/CSS/Desafio CSS/Tarefa 2/tarefa2.html
@@ -20,5 +20,12 @@
         <li>Orden CSS</li>
         <li>Multiplos Arquivos</li>
     </ul>
+    <div class="fixed">
+        <span>
+            <a href="../../../index.html">
+                Clique aqui para voltar ao menu principal
+            </a>
+        </span>
+    </div>
 </body>
 </html>
