--- a/CSS/Desafio CSS/Tarefa 3/tarefa.html
+++ b/CSS/Desafio CSS/Tarefa 3/tarefa.html
@@ -29,5 +29,12 @@
             Lorem, ipsum dolor.
         </h3>
     </div>
+    <div class="fixed">
+        <span>
+            <a href="../../../index.html">
+                Clique aqui para voltar ao menu principal
+            </a>
+        </span>
+    </div>
 </body>
 </html>
