--- a/CSS/Projeto - Formularios/index.html
+++ b/CSS/Projeto - Formularios/index.html
@@ -152,5 +152,12 @@
             </div>
         </div>
     </div>
+    <div class="fixed">
+        <span>
+            <a href="../../index.html">
+                Clique aqui para voltar ao menu principal
+            </a>
+        </span>
+    </div>
 </body>
 </html>
