modificando index principal

--- a/index.html
+++ b/index.html
@@ -14,39 +14,49 @@
                 <h2 style="text-align: center; font-size: 25px;">CSS</h2>
                 <div class="intro">
                     <h2>Intro</h2>
-                    <ul>
-                        <li>
-                            <a href="./CSS/1 - INTRO/index.html">
-                                1 - Intro 
-                            </a>
-                        </li>
-                        <li>
-                            <a href="./CSS/Desafio CSS/Tarefa 2/tarefa2.html">
-                                Desafio - Tarefa 2
-                            </a>
-                        </li>
-                        <li>
-                            <a href="./CSS/Desafio CSS/Tarefa 3/tarefa.html">
-                                Desafio - Tarefa 3
-                            </a>
-                        </li>
-                    </ul>
+                    <div class="container-introducion">
+                        <div class="introducion">
+                            <h3>Exercicíos</h3>
+                            <ul>
+                                <li>
+                                    <a href="./CSS/1 - INTRO/index.html">
+                                        1 - Intro 
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="./CSS/2 - FORMULARIOS/index.html">
+                                        1 - Fromularios
+                                    </a>
+                                </li>
+                            </ul>
+                        </div>
+                        <div class="introducion">
+                            <h3>Projetos</h3>
+                            <ul>
+                                <li>
+                                    <a href="./CSS/Desafio CSS/Tarefa 2/tarefa2.html">
+                                        Desafio - Tarefa 2
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="./CSS/Desafio CSS/Tarefa 3/tarefa.html">
+                                        Desafio - Tarefa 3
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="./CSS/Projeto - Formularios/index.html">
+                                        2 - Projeto Fromularios
+                                    </a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                    
                 </div>
             </div>
             <div class="intro">
-                <h2>Formularios</h2>
-                <ul>
-                    <li>
-                        <a href="./CSS/2 - FORMULARIOS/index.html">
-                            1 - Fromularios
-                        </a>
-                    </li>
-                    <li>
-                        <a href="./CSS/Projeto - Formularios/index.html">
-                            2 - Projeto Fromularios
-                        </a>
-                    </li>
-                </ul>
+                <h2>JavaScript</h2>
+                
             </div>
         </div>
     </div>
