atualizando index principal

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                                 </li>
                                 <li>
                                     <a href="./CSS/2 - FORMULARIOS/index.html">
-                                        1 - Fromularios
+                                        2 - Fromularios
                                     </a>
                                 </li>
                             </ul>
@@ -35,17 +35,17 @@
                             <ul>
                                 <li>
                                     <a href="./CSS/Desafio CSS/Tarefa 2/tarefa2.html">
-                                        Desafio - Tarefa 2
+                                        1 - Desafio - Tarefa 2
                                     </a>
                                 </li>
                                 <li>
                                     <a href="./CSS/Desafio CSS/Tarefa 3/tarefa.html">
-                                        Desafio - Tarefa 3
+                                        2 - Desafio - Tarefa 3
                                     </a>
                                 </li>
                                 <li>
                                     <a href="./CSS/Projeto - Formularios/index.html">
-                                        2 - Projeto Fromularios
+                                        3 - Projeto Fromularios
                                     </a>
                                 </li>
                             </ul>
@@ -54,10 +54,10 @@
                     
                 </div>
             </div>
-            <div class="intro">
+            <!-- <div class="intro">
                 <h2>JavaScript</h2>
                 
-            </div>
+            </div> -->
         </div>
     </div>
 </body>
