--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <div>
                 <h2 style="text-align: center; font-size: 25px;">CSS</h2>
                 <div class="intro">
-                    <h2>Intro</h2>
+                    <!-- <h2>Intro</h2> -->
                     <div class="container-introducion">
                         <div class="introducion">
                             <h3>Exercicíos</h3>
@@ -26,6 +26,11 @@
                                 <li>
                                     <a href="./CSS/2 - FORMULARIOS/index.html">
                                         2 - Fromularios
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="./CSS/Responsividade/index.html">
+                                        3 - Responsividade
                                     </a>
                                 </li>
                             </ul>
