--- a/CSS/Projeto -  HDC Host/index.html
+++ b/CSS/Projeto -  HDC Host/index.html
@@ -3,9 +3,40 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- icon -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="./css/style.css">
     <title>Projeto - HDC Host</title>
 </head>
 <body>
-    
+    <div class="container">
+        <div class="navbar-container">
+            <nav>
+                <a href="">
+                    <img src="img/hdchostlogo.png" alt="hdc host" class="logo">
+                </a>
+                <ul class="navbar-itens">
+                    <li>
+                        <a href="">HOME</a>
+                    </li>
+                    <li>
+                        <a href="">Preços</a>
+                    </li>
+                    <li>
+                        <a href="">Contato</a>
+                    </li>
+                    <li>
+                        <a href="" class="default-btn">Entrar</a>
+                    </li>
+                </ul>
+            </nav>
+            <main>
+                <div class="main-banner">
+                    <h1>hDC Host</h1>
+                    <p>Os melhores serviços para projetos de todos os tamanhos!</p>
+                </div>
+            </main>
+        </div>
+    </div>
 </body>
 </html>
