--- a/CSS/Projeto -  HDC Host/index.html
+++ b/CSS/Projeto -  HDC Host/index.html
@@ -36,6 +36,157 @@
                 <h1>hDC Host</h1>
                 <p>Os melhores serviços para projetos de todos os tamanhos!</p>
             </div>
+            <section class="services-container">
+                <ul>
+                    <li>
+                        <i class="fas fa-shield-alt"></i>
+                        <h3>Segurança</h3>
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor repellendus iure perspiciatis, dolorum necessitatibus beatae eius illum porro facilis. Quaerat blanditiis, tenetur voluptatem eaque quis est ut nulla quidem ipsa.
+                        </p>
+                    </li>
+                    <li>
+                        <i class="fas fa-rocket"></i>
+                        <h3>Performance</h3>
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor repellendus iure perspiciatis, dolorum necessitatibus beatae eius illum porro facilis. Quaerat blanditiis, tenetur voluptatem eaque quis est ut nulla quidem ipsa.
+                        </p>
+                    </li>
+                    <li>
+                        <i class="fas fa-comments"></i>
+                        <h3>Suporte</h3>
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor repellendus iure perspiciatis, dolorum necessitatibus beatae eius illum porro facilis. Quaerat blanditiis, tenetur voluptatem eaque quis est ut nulla quidem ipsa.
+                        </p>
+                    </li>
+                </ul>
+            </section>
+            <section class="pricing-container">
+                <h2>Planos e Preços</h2>
+                <p>Selecione o plano que atende as suas necessidades</p>
+                <div class="plans-container">
+                    <div class="plan">
+                        <ul>
+                            <li class="price">
+                                R$15,00/mês
+                            </li>
+                            <li class="plan-name">
+                                Basico
+                            </li>
+                            <li >
+                                2GB de espaço
+                            </li>
+                            <li >
+                                1 Subdominio
+                            </li>
+                            <li >
+                                25 contas de e-mail
+                            </li>
+                            <li >
+                                C-panel
+                            </li>
+                            <li >
+                                Suporte 24/7
+                            </li>
+                            <li class="plan-btn">
+                                Saber mais
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="plan">
+                        <ul>
+                            <li class="price">
+                                R$30,00/mês
+                            </li>
+                            <li class="plan-name">
+                                Dedicado
+                            </li>
+                            <li >
+                                5GB de espaço
+                            </li>
+                            <li>
+                                10 Subdominio
+                            </li>
+                            <li >
+                                50 contas de e-mail
+                            </li>
+                            <li >
+                                C-panel
+                            </li>
+                            <li >
+                                Suporte 24/7
+                            </li>
+                            <li class="plan-btn">
+                                Saber mais
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="plan">
+                        <ul>
+                            <li class="price recomended">
+                                R$50,00/mês
+                            </li>
+                            <li class="plan-name">
+                                Dedicado plus
+                            </li>
+                            <li >
+                                10GB de espaço
+                            </li>
+                            <li>
+                                10 Subdominio
+                            </li>
+                            <li >
+                                100 contas de e-mail
+                            </li>
+                            <li >
+                                C-panel
+                            </li>
+                            <li >
+                                Suporte 24/7
+                            </li>
+                            <li class="plan-btn recomended">
+                                Saber mais
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="plan">
+                        <ul>
+                            <li class="price">
+                                R$100,00/mês
+                            </li>
+                            <li class="plan-name">
+                                Cloud
+                            </li>
+                            <li >
+                                20GB de espaço
+                            </li>
+                            <li>
+                                20 Subdominio
+                            </li>
+                            <li >
+                                2000 contas de e-mail
+                            </li>
+                            <li >
+                                C-panel
+                            </li>
+                            <li >
+                                Suporte 24/7
+                            </li>
+                            <li class="plan-btn">
+                                Saber mais
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </section>
+            <section class="searchdomain-container">
+                <h2>Qual dominio você quer para o seu site?</h2>
+                <p>Verifique se o dominio esta disponivel</p>
+                <form action="">
+                    <input type="text" name="domain" id="domain" placeholder="Digite o dominio desejado">
+                    <input type="submit" value="Proucurar dominio">
+                </form>
+            </section>
         </main>
     </div>
 </body>
