--- a/CSS/Projeto -  HDC Host/index.html
+++ b/CSS/Projeto -  HDC Host/index.html
@@ -187,7 +187,20 @@
                     <input type="submit" value="Proucurar dominio">
                 </form>
             </section>
+            <section class="contact-container">
+                <h2>Mande uma mensagem</h2>
+                <p>Envie a sua mensagem, em até 4 horas um especialista entrara em contato</p>
+                <form action="">
+                    <input type="text" name="name" id="name" placeholder="Seu nome">
+                    <input type="email" name="email" id="email" placeholder="Seu e-mail">
+                    <textarea name="message" id="message" placeholder="Descreva o que você precisa ou o seu projeto..."></textarea>
+                    <input type="submit" value="Enviar">
+                </form>
+            </section>
         </main>
+        <footer>
+            <p>hDC Host @ 2024</p>
+        </footer>
     </div>
 </body>
 </html>
