--- a/CSS/Projeto -  HDC Host/index.html
+++ b/CSS/Projeto -  HDC Host/index.html
@@ -202,5 +202,12 @@
             <p>hDC Host @ 2024</p>
         </footer>
     </div>
+    <div class="fixed">
+        <span>
+            <a href="../../index.html">
+                Clique aqui para voltar ao menu principal
+            </a>
+        </span>
+    </div>
 </body>
 </html>
