--- a/index.html
+++ b/index.html
@@ -53,6 +53,11 @@
                                         3 - Projeto Fromularios
                                     </a>
                                 </li>
+                                <li>
+                                    <a href="./CSS/Projeto -  HDC Host/index.html">
+                                        4 - Projeto hDC HOST
+                                    </a>
+                                </li>
                             </ul>
                         </div>
                     </div>
