--- a/CSS/Flexbox/index.html
+++ b/CSS/Flexbox/index.html
@@ -7,6 +7,143 @@
     <title>Flexbox</title>
 </head>
 <body>
-    <h2>teste</h2>
+    <!-- 1 - flex -->
+    <div class="flex">
+        <p>FLEX</p>
+        <p>Meu</p>
+        <p>Primeiro</p>
+        <p>Elemento</p>
+        <p>Com flex</p>
+    </div>
+
+    <!-- 2 - flex direction  coluun-->
+    <div class="flex-column">
+        <span>FLEX-COLUMN</span>
+        <span>1</span>
+        <span>2</span>
+        <span>3</span>
+    </div>
+
+    <!-- 3 flex wrap -->
+    <div class="flex-wrap">
+        <div class="box">FLEX-WRAP</div>
+        <div class="box">1</div>
+        <div class="box">2</div>
+        <div class="box">3</div>
+        <div class="box">4</div>
+        <div class="box">5</div>
+    </div>
+
+    <!-- 4 justify content -->
+    <h2>JUSTIFY-CONTENT</h2>
+    <div class="center">
+        <div class="box"></div>
+        <div class="box"></div>
+        <div class="box"></div>
+    </div>
+    <h2>SPACE AROUND</h2>
+    <div class="space-around">
+        <div class="box"></div>
+        <div class="box"></div>
+        <div class="box"></div>
+    </div>
+    <h2>SPACE BETWEEN</h2>
+    <div class="space-between">
+        <div class="box"></div>
+        <div class="box"></div>
+        <div class="box"></div>
+    </div>
+    <h2>END</h2>
+    <div class="end">
+        <div class="box"></div>
+        <div class="box"></div>
+        <div class="box"></div>
+    </div>
+
+    <!-- 5 align-itens -->
+    <h2>ALIGN ITENS CENTER</h2>
+    <div class="align-center">
+        <div class="box"></div>
+        <div class="box"></div>
+        <div class="box"></div>
+    </div>
+    <h2>FLEX END</h2>
+    <div class="flex-end">
+        <div class="box"></div>
+        <div class="box"></div>
+        <div class="box"></div>
+    </div>
+    <h2>STRECH</h2>
+    <div class="strech">
+        <div class="box"></div>
+        <div class="box"></div>
+        <div class="box"></div>
+    </div>
+
+    <!-- 6 - gap -->
+    <div class="gap">
+        <div class="box"></div>
+        <div class="box"></div>
+        <div class="box"></div>
+        <div class="box"></div>
+        <div class="box"></div>
+        <div class="box"></div>
+    </div>
+
+    <!-- 7 - order -->
+    <h2>ORDER</h2>
+    <div class="order">
+        <div class="box" id="three">3</div>
+        <div class="box" id="one">1</div>
+        <div class="box" id="two">2</div>
+    </div>
+
+    <!-- 8 - grow -->
+    <h2>GROW</h2>
+    <div class="grow">
+        <div class="box"></div>
+        <div class="box big"></div>
+        <div class="box"></div>
+    </div>
+
+    <!-- 9 - basis -->
+    <h2>BASIS</h2>
+    <div class="basis">
+        <div class="box"></div>
+        <div class="box big"></div>
+        <div class="box"></div>
+    </div>
+
+    <!-- 10 - shrink -->
+    <h2>SHRINK</h2>
+    <div class="shrink">
+        <div class="box"></div>
+        <div class="box small"></div>
+        <div class="box"></div>
+    </div>
+
+    <!-- 11 - shorthand -->
+    <h2>SHORTHAND</h2>
+    <div class="shorthand">
+        <div class="box"></div>
+        <div class="box different"></div>
+        <div class="box"></div>
+    </div>
+
+    <!-- 12 - align-self -->
+    <h2>ALIGN-SELF</h2>
+    <div class="auto-alignment">
+        <div class="box"></div>
+        <div class="box different"></div>
+        <div class="box"></div>
+    </div>
+
+    <div class="fixed">
+        <span>
+            <a href="../../index.html">
+                Clique aqui para voltar ao menu principal
+            </a>
+        </span>
+    </div>
 </body>
 </html>
