--- a/index.html
+++ b/index.html
@@ -33,6 +33,11 @@
                                         3 - Responsividade
                                     </a>
                                 </li>
+                                <li>
+                                    <a href="./CSS/Flexbox/index.html">
+                                        4 - Flexbox
+                                    </a>
+                                </li>
                             </ul>
                         </div>
                         <div class="introducion">
