--- a/CSS/Projeto - Login Instagran/index.html
+++ b/CSS/Projeto - Login Instagran/index.html
@@ -27,8 +27,10 @@
                     </div>
                     <div id="other-links">
                         <div id="facebook-login">
-                            <img src="img/logo_facebook.svg" alt="Facebook Login">
-                            <span>Entrar com o Facebook</span>
+                            <a href="#">
+                                <img src="img/logo_facebook.svg" alt="Facebook Login">
+                                <span>Entrar com o Facebook</span>
+                            </a>
                         </div>
                         <div id="forgot-pass">
                             <a href="#">Esqueceu a senha</a>
