--- a/CSS/Projeto - Login Instagran/index.html
+++ b/CSS/Projeto - Login Instagran/index.html
@@ -94,5 +94,13 @@
            &copy;2022 Instagran from Meta 
         </p>
     </footer>
+
+    <div class="fixed">
+        <span>
+            <a href="../../index.html">
+                Clique aqui para voltar ao menu principal
+            </a>
+        </span>
+    </div>
 </body>
 </html>
