--- a/index.html
+++ b/index.html
@@ -63,6 +63,16 @@
                                         4 - Projeto hDC HOST
                                     </a>
                                 </li>
+                                <li>
+                                    <a href="./CSS/Projeto - Login Instagran/index.html">
+                                        5 - Projeto Login Instagran
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="./CSS/Blog Semantico/index.html">
+                                        6 - Projeto Blog
+                                    </a>
+                                </li>
                             </ul>
                         </div>
                     </div>
