--- a/CSS/Blog Semantico/index.html
+++ b/CSS/Blog Semantico/index.html
@@ -110,5 +110,12 @@
         <p>Os melhores registros de aventuras</p>
         <p>2024 &copy; Hora de codar</p>
     </footer>
+    <div class="fixed">
+        <span>
+            <a href="../../index.html">
+                Clique aqui para voltar ao menu principal
+            </a>
+        </span>
+    </div>
 </body>
 </html>
