--- a/JS/1_INTRO/index.html
+++ b/JS/1_INTRO/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./css/style.css">
     <title>JavaScript</title>
     <script>
         console.log("Executou JS!")
@@ -10,6 +11,19 @@
     <script src="js/script.js"></script>
 </head>
 <body>
-    
+    <section>
+        <h1>Intro</h1>
+        <p>Aqui aprendemos como executar JS, através da tag script console.log(“Executou JS”) /script, ou por importação de arquivo js. script src="js/script.js" /script>
+        </p>
+        <span class="span">Para visualizar o conteúdo abordado nesse exercícios, basta aperta F12 do seu teclado, ou clicar com o botão direito do mouse na pagina do site e ir em <b>INSPECIONAR</b> e clicar em <b>CONSOLE</b>, que verá os exercícios abordados.</span>
+        
+    </section>
+    <div class="fixed">
+        <span>
+            <a href="../../index.html">
+                Clique aqui para voltar ao menu principal
+            </a>
+        </span>
+    </div>
 </body>
 </html>
