--- a/JS/3_Operadores/index.html
+++ b/JS/3_Operadores/index.html
@@ -3,10 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/JS/3_Operadores/css/style.css">
     <title>Tipo de operadores</title>
 </head>
 <body>
-    <h1>TIPO DE OPERADORES</h1>
+    <section>
+        <h1>TIPO DE OPERADORES</h1>
+        <p>Aqui aprendemos sobre operadores number, string, operações aritméticas, boolean etc. São os primeiros passos basico para o caminho de desenvolvimento front-end.
+            Em breve mais passos para avançar rumo ao <b>desenvolvimento web</b>.
+        </p>
+        <span class="span">Para visualizar o conteúdo abordado nesse exercícios, basta aperta F12 do seu teclado, ou clicar com o botão direito do mouse na pagina do site e ir em <b>INSPECIONAR</b> e clicar em <b>CONSOLE</b>, que verá os exercícios abordados.</span>
+    </section>
+    <div class="fixed">
+        <span>
+            <a href="../../index.html">
+                Clique aqui para voltar ao menu principal
+            </a>
+        </span>
+    </div>
     <script src="js/scripts.js"></script>
 </body>
 </html>
