--- a/index.html
+++ b/index.html
@@ -79,10 +79,25 @@
                     
                 </div>
             </div>
-            <!-- <div class="intro">
+            <div class="intro">
                 <h2>JavaScript</h2>
-                
-            </div> -->
+                <div class="container-introducion">
+                    <div class="introducion">
+                        <h3>Exercícios</h3>
+                        <ul>
+                            <li>
+                                <a href="/JS/1_INTRO/index.html">Intro Js</a>
+                            </li>
+                            <li>
+                                <a href="/JS/3_Operadores/index.html">Operadores Js</a>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="introducion">
+                        <h3>Projetos</h3>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 </body>
