Estrutura de programação

--- a/index.html
+++ b/index.html
@@ -86,10 +86,10 @@
                         <h3>Exercícios</h3>
                         <ul>
                             <li>
-                                <a href="/JS/1_INTRO/index.html">Intro Js</a>
+                                <a href="./JS/1_INTRO/index.html">Intro Js</a>
                             </li>
                             <li>
-                                <a href="/JS/3_Operadores/index.html">Operadores Js</a>
+                                <a href="./JS/3_Operadores/index.html">Operadores Js</a>
                             </li>
                         </ul>
                     </div>
