--- a/JS/4_Estrutura/index.html
+++ b/JS/4_Estrutura/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/style.css">
-    <title>Tipo de operadores</title>
+    <title>Estruturas de Programação</title>
 </head>
 <body>
     <section>
-        <h1>TIPO DE OPERADORES</h1>
-        <p>Aqui aprendemos sobre operadores number, string, operações aritméticas, boolean etc. São os primeiros passos basico para o caminho de desenvolvimento front-end.
+        <h1>Estruturas de Programação</h1>
+        <p>Aqui aprendemos sobre estruturas de programação, onde abordamos temas como if, else, while, for, switch e demais estruturas. São os primeiros passos basico para o caminho de desenvolvimento front-end.
             Em breve mais passos para avançar rumo ao <b>desenvolvimento web</b>.
         </p>
         <span class="span">Para visualizar o conteúdo abordado nesse exercícios, basta aperta F12 do seu teclado, ou clicar com o botão direito do mouse na pagina do site e ir em <b>INSPECIONAR</b> e clicar em <b>CONSOLE</b>, que verá os exercícios abordados.</span>
