Criando estrura do novo modulo 5 - funções

--- a/JS/5_Funcoes/index.html
+++ b/JS/5_Funcoes/index.html
@@ -3,21 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="img/js.png" type="image/x-icon">
     <link rel="stylesheet" href="./css/style.css">
-    <title>JavaScript</title>
-    <script>
-        console.log("Executou JS!")
-    </script>
-    <script src="js/script.js"></script>
+    <title>Funçoes em JavaScript</title>
+    <link rel="shortcut icon" href="img/js.png" type="image/x-icon">
 </head>
 <body>
     <section>
-        <h1>Intro</h1>
-        <p>Aqui aprendemos como executar JS, através da tag script console.log(“Executou JS”) /script, ou por importação de arquivo js. script src="js/script.js" /script>
+        <h1>Funçoes em JavaScript</h1>
+        <p>Aqui aprendemos sobre funçoes em javascript. São os primeiros passos intermediario para o caminho de desenvolvimento front-end.
+            Em breve mais passos para avançar rumo ao <b>desenvolvimento web</b>.
         </p>
         <span class="span">Para visualizar o conteúdo abordado nesse exercícios, basta aperta F12 do seu teclado, ou clicar com o botão direito do mouse na pagina do site e ir em <b>INSPECIONAR</b> e clicar em <b>CONSOLE</b>, que verá os exercícios abordados.</span>
-        
     </section>
     <div class="fixed">
         <span>
@@ -26,5 +22,6 @@
             </a>
         </span>
     </div>
+    <script src="js/scripts.js"></script>
 </body>
 </html>
