--- a/index.html
+++ b/index.html
@@ -91,6 +91,9 @@
                             <li>
                                 <a href="./JS/3_Operadores/index.html">Operadores Js</a>
                             </li>
+                            <li>
+                                <a href="./JS/4_Estrutura/index.html">Estruturas de Programação</a>
+                            </li>
                         </ul>
                     </div>
                     <div class="introducion">
