--- a/JS/3_Operadores/index.html
+++ b/JS/3_Operadores/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="shortcut icon" href="img/js.png" type="image/x-icon">
     <title>Tipo de operadores</title>
 </head>
 <body>
