Finalizando Funções em JS

--- a/JS/5_Funcoes/index.html
+++ b/JS/5_Funcoes/index.html
@@ -10,7 +10,7 @@
 <body>
     <section>
         <h1>Funçoes em JavaScript</h1>
-        <p>Aqui aprendemos sobre funçoes em javascript. São os primeiros passos intermediario para o caminho de desenvolvimento front-end.
+        <p>Aqui aprendemos sobre funçoes em javascript como function, arrow function, escopo. São os primeiros passos intermediario para o caminho de desenvolvimento front-end.
             Em breve mais passos para avançar rumo ao <b>desenvolvimento web</b>.
         </p>
         <span class="span">Para visualizar o conteúdo abordado nesse exercícios, basta aperta F12 do seu teclado, ou clicar com o botão direito do mouse na pagina do site e ir em <b>INSPECIONAR</b> e clicar em <b>CONSOLE</b>, que verá os exercícios abordados.</span>
