criando estruturas para modulo ARRAYS E OBJETOS

--- a/index.html
+++ b/index.html
@@ -94,6 +94,9 @@
                             <li>
                                 <a href="./JS/4_Estrutura/index.html">Estruturas de Programação</a>
                             </li>
+                            <li>
+                                <a href="./JS/5_Funcoes/index.html">Funções em JavaScript</a>
+                            </li>
                         </ul>
                     </div>
                     <div class="introducion">
