Iniciando Orientação a objetos

--- a/index.html
+++ b/index.html
@@ -97,6 +97,9 @@
                             <li>
                                 <a href="./JS/5_Funcoes/index.html">Funções em JavaScript</a>
                             </li>
+                            <li>
+                                <a href="./JS/6_Arrays_Objetos/index.html">Arrays e objetos</a>
+                            </li>
                         </ul>
                     </div>
                     <div class="introducion">
