--- a/index.html
+++ b/index.html
@@ -100,6 +100,9 @@
                             <li>
                                 <a href="./JS/6_Arrays_Objetos/index.html">Arrays e objetos</a>
                             </li>
+                            <li>
+                                <a href="./JS/7_Orientacao_Objetos/index.html">Orientação a Objetos</a>
+                            </li>
                         </ul>
                     </div>
                     <div class="introducion">
