Iniciando novo capitulo - Programacao assicrona

--- a/index.html
+++ b/index.html
@@ -103,6 +103,9 @@
                             <li>
                                 <a href="./JS/7_Orientacao_Objetos/index.html">Orientação a Objetos</a>
                             </li>
+                            <li>
+                                <a href="./JS/8_Debug/index.html">Depuração com JavaScript</a>
+                            </li>
                         </ul>
                     </div>
                     <div class="introducion">
