Configurando novo modulo - JS no Mavegador

--- a/index.html
+++ b/index.html
@@ -106,6 +106,9 @@
                             <li>
                                 <a href="./JS/8_Debug/index.html">Depuração com JavaScript</a>
                             </li>
+                            <li>
+                                <a href="./JS/9_Programacao_assicrona/index.html">Programação Assicrona</a>
+                            </li>
                         </ul>
                     </div>
                     <div class="introducion">
