Concluindo JS no navegador

--- a/JS/10_JS_NO_NAVEGADOR/DOM/html/index.html
+++ b/JS/10_JS_NO_NAVEGADOR/DOM/html/index.html
@@ -14,8 +14,12 @@
         <nav>
             <ul>
                 <li>
-                    <a href="#">Home</a>
-                    <a href="#">Produtos</a>
+                    <a href="#">Home</a>    
+                </li>
+                <li>
+                    <a href="#" class="linkP">Produtos</a>
+                </li>
+                <li>
                     <a href="#">Contatos</a>
                 </li>
             </ul>
