--- a/JS/10_JS_NO_NAVEGADOR/index.html
+++ b/JS/10_JS_NO_NAVEGADOR/index.html
@@ -13,6 +13,14 @@
         <p>Aqui aprendemos sobre setTimeout, setInterval e Promises em javascript. São os primeiros passos intermediario para o caminho de desenvolvimento front-end.
             Em breve mais passos para avançar rumo ao <b>desenvolvimento web</b>.
         </p>
+        <ul>
+            <li>
+                <a href="./DOM/html/index.html">DOM</a>
+            </li>
+            <li>
+                <a href="#">--</a>
+            </li>
+        </ul>
         <span class="span">Para visualizar o conteúdo abordado nesse exercícios, basta aperta F12 do seu teclado, ou clicar com o botão direito do mouse na pagina do site e ir em <b>INSPECIONAR</b> e clicar em <b>CONSOLE</b>, que verá os exercícios abordados.</span>
     </section>
     <div class="fixed">
