--- a/JS/10_JS_NO_NAVEGADOR/EVENTOS/index.html
+++ b/JS/10_JS_NO_NAVEGADOR/EVENTOS/index.html
@@ -3,10 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/style.css">
-    <title>EVENTOS</title>
+    <link rel="stylesheet" href="css/style.css">
     <link rel="shortcut icon" href="img/js.png" type="image/x-icon">
+    <script src="JS/script.js" defer></script>
+    <title>EVENTOS</title>
 </head>
 <body>
+    <h1 id="my-title">Eventos</h1>
+    <button id="my-button">
+        Clica em mim!
+    </button>
+    <hr>
+    <h2>Removendo eventos</h2>
+    <button id="btn">
+        Tem evento
+    </button>
+    <button id="other-btn">
+        Remover evento
+    </button>
 </body>
 </html>
