--- a/JS/10_JS_NO_NAVEGADOR/EVENTOS/index.html
+++ b/JS/10_JS_NO_NAVEGADOR/EVENTOS/index.html
@@ -21,5 +21,20 @@
     <button id="other-btn">
         Remover evento
     </button>
+    <div id="btn-container">
+        <button id="div-btn">
+            Propagação
+        </button>
+    </div>
+    <a href="https://www.google.com">Ir para o google</a>
+
+    <h4 id="mouse">
+        Outros eventos de mouse
+    </h4>
+
+    <h4>
+        Evento de foco
+    </h4>
+    <input type="text" name="text" id="my-input" placeholder="Testendo focus ...">
 </body>
 </html>
