Iniciando Projeto Tabuada

--- a/JS/10_JS_NO_NAVEGADOR/index.html
+++ b/JS/10_JS_NO_NAVEGADOR/index.html
@@ -14,11 +14,11 @@
             Em breve mais passos para avançar rumo ao <b>desenvolvimento web</b>.
         </p>
         <ul>
-            <li>
+            <li class="dom">
                 <a href="./DOM/html/index.html">DOM</a>
             </li>
-            <li>
-                <a href="#">--</a>
+            <li class="dom2">
+                <a href="EVENTOS/index.html">EVENTOS</a>
             </li>
         </ul>
         <span class="span">Para visualizar o conteúdo abordado nesse exercícios, basta aperta F12 do seu teclado, ou clicar com o botão direito do mouse na pagina do site e ir em <b>INSPECIONAR</b> e clicar em <b>CONSOLE</b>, que verá os exercícios abordados.</span>
