--- a/JS/Projeto Tabuada/index.html
+++ b/JS/Projeto Tabuada/index.html
@@ -9,6 +9,26 @@
     <title>Projeto Tabuada</title>
 </head>
 <body>
-    
+    <h2>Digite o número e confirme para gerar uma tabuada</h2>
+    <form action="" id="multiplicacao-form">
+        <div class="form-control">
+            <label for="number">Tabuada do:</label>
+            <input type="number" name="number" id="number" placeholder="3">
+        </div>
+        <div class="form-control">
+            <label for="multiplicator">Multiplicar até:</label>
+            <input type="number" name="multiplicator" id="multiplicator" value="10">
+        </div>
+        <input type="submit" value="Calcular">
+    </form>
+    <div id="multiplication-table">
+        <h2 id="multiplication-title">
+            Tabuada do número:
+        </h2>
+        <div id="multiplication-operations">
+            <p>Informe o numero para calcular uma tabuada...</p>
+            
+        </div>
+    </div> 
 </body>
 </html>
