Conclusão do projeto tabuada JS

--- a/JS/Projeto Tabuada/index.html
+++ b/JS/Projeto Tabuada/index.html
@@ -23,7 +23,7 @@
     </form>
     <div id="multiplication-table">
         <h2 id="multiplication-title">
-            Tabuada do número:
+            Tabuada do número: <span></span>
         </h2>
         <div id="multiplication-operations">
             <p>Informe o numero para calcular uma tabuada...</p>
