Inserindo o index na lista de projeto a ser visualisado na pagina principal

--- a/index.html
+++ b/index.html
@@ -113,6 +113,11 @@
                     </div>
                     <div class="introducion">
                         <h3>Projetos</h3>
+                        <ul>
+                            <li>
+                                <a href="/JS/Projeto Tabuada/index.html">Tabuada</a>
+                            </li>
+                        </ul>
                     </div>
                 </div>
             </div>
