--- a/JS/Projeto Tabuada/index.html
+++ b/JS/Projeto Tabuada/index.html
@@ -27,8 +27,14 @@
         </h2>
         <div id="multiplication-operations">
             <p>Informe o numero para calcular uma tabuada...</p>
-            
         </div>
     </div> 
+    <div class="fixed">
+        <span>
+            <a href="../../index.html">
+                Clique aqui para voltar ao menu principal
+            </a>
+        </span>
+    </div>
 </body>
 </html>
