Finalizando Projeto QR Code

--- a/JS/Projeto QR CODE/index.html
+++ b/JS/Projeto QR CODE/index.html
@@ -30,5 +30,12 @@
             <img src="img/qrcode.png" alt="QR Code">
         </div>
     </div>
+    <div class="fixed">
+        <span>
+            <a href="../../index.html">
+                Clique aqui para voltar ao menu principal
+            </a>
+        </span>
+    </div>
 </body>
 </html>
