--- a/index.html
+++ b/index.html
@@ -117,6 +117,9 @@
                             <li>
                                 <a href="/JS/Projeto Tabuada/index.html">Tabuada</a>
                             </li>
+                            <li>
+                                <a href="/JS/Projeto QR CODE/index.html">QR Code</a>
+                            </li>
                         </ul>
                     </div>
                 </div>
