--- a/JS/Clone Page Vendas Iphone/index.html
+++ b/JS/Clone Page Vendas Iphone/index.html
@@ -14,6 +14,92 @@
     <title>Iphone 13 Pro</title>
 </head>
 <body>
-    
+    <header>
+        <nav>
+            <ul id="navbar">
+                <li id="logo">
+                    <a href="#">
+                        <img src="img/logo_apple.svg" alt="Logo">
+                    </a>
+                </li>
+                <li>
+                    <a href="">Loja</a>
+                </li>
+                <li>
+                    <a href="">MEC</a>
+                </li>
+                <li>
+                    <a href="">Ipad</a>
+                </li>
+                <li>
+                    <a href="">Iphone</a>
+                </li>
+                <li>
+                    <a href="">Watch</a>
+                </li>
+                <li>
+                    <a href="">Ipod</a>
+                </li>
+                <li>
+                    <a href="">Só na Apple</a>
+                </li>
+                <li>
+                    <a href="">Acessórios</a>
+                </li>
+                <li>
+                    <a href="">Suporte</a>
+                </li>
+            </ul>
+        </nav>
+        <div id="botton-header">
+            <div id="button-header-inner">
+                <h3>Iphone 13 Pro</h3>
+                <div id="botton-header-links">
+                    <a href="#">Visão geral</a>
+                    <a href="#">Mudar para o iphone</a>
+                    <a href="#">Especificações</a>
+                    <a href="#" class="btn">Comprar</a>
+                </div>
+            </div>
+        </div>
+    </header>
+    <div id="ribbon">
+        <p>Pague seu novo Iphome em até 12 parcelas ou economize 10% nos pagamentos a vista</p>
+        <a href="#">Saiba nais</a>
+    </div>
+    <h1 id="title">
+        Iphone 13 Pro
+    </h1>
+    <p id="subtitle">É todo Pro.</p>
+    <p id="descripition">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut dolorem soluta assumenda qui optio recusandae voluptatibus repudiandae ipsum. Vitae recusandae unde consectetur nostrum earum tempore, voluptatibus corrupti, minima autem aut, aspernatur ipsum officia!
+    </p>
+    <p id="price">Aparti de R$ 9,949</p>
+    <a href="#" class="btn">Comprar</a>
+    <img src="img/iphone_green.jpg" id="product-image" alt="Iphone 13 pro">
+    <div id="image-picker">
+        <ul>
+            <li id="green">
+                <span class="color selected"></span>
+                <span class="description">Verde alpino</span>
+            </li>
+            <li id="silver">
+                <span class="color "></span>
+                <span class="description">Pratado</span>
+            </li>
+            <li id="golden">
+                <span class="color "></span>
+                <span class="description">Dourado</span>
+            </li>
+            <li id="grafite">
+                <span class="color "></span>
+                <span class="description">Grafite</span>
+            </li>
+            <li id="blue">
+                <span class="color "></span>
+                <span class="description">Azul Sierra</span>
+            </li>
+        </ul>
+    </div>
 </body>
 </html>
